syntax = "proto3";

package mail;

service MailService {
    rpc SendAccessCode (SendAccessCodeDTO) returns (stream AccessCode);
    rpc ConfirmAccessCode (ConfirmAccessCodeDTO) returns (stream IsConfirmedAccessCode);
}

message AccessCode {
    string id = 1;
    int32 createdAt = 2;
    int32 expiresIn = 3;
    int32 code = 4;
    string user_id = 5;
}

message SendAccessCodeDTO {
    string email = 1;
    string user_id = 2;
}

message ConfirmAccessCodeDTO {
    string user_id = 1;
    int32 code = 2;
}

message IsConfirmedAccessCode {
    bool isConfirmed = 1;
}